--- a/less/responsive/bootswatch/imports/navbar.less
+++ b/less/responsive/bootswatch/imports/navbar.less
@@ -3,7 +3,7 @@
     .navbar-brand {
       border-right: none;
       font-size: 15px;
-      padding: 20.5px 15px;
+      padding: 20.5px 22px;
       width: 190px;
 
       img {
@@ -56,7 +56,7 @@
     }
   }
 
-  @media (min-width: @screen-md-min) {
+  @media (min-width: @screen-xs-max) {
     .navbar-nav {
       > li {
         &.search-link {
